force-app/main/default/objects/RequestForTechnician__c/RequestForTechnician__c.object-meta.xml
<CustomObject>
    <label>Request For Technician</label>
    <nameField>
        <displayFormat>RFT-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request For Technicians</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>