force-app/main/default/objects/RequestForTechnician__c/fields/DescriptionForTechnician__c.field-meta.xml
<CustomField>
    <fullName>DescriptionForTechnician__c</fullName>
    <label>Description For Technician</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>