force-app/main/default/objects/RequestForTechnician__c/fields/NoteForSalesman__c.field-meta.xml
<CustomField>
    <fullName>NoteForSalesman__c</fullName>
    <label>Note for Salesman</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>