force-app/main/default/objects/RequestForTechnician__c/fields/QuoteCurrency__c.field-meta.xml
<CustomField>
    <fullName>QuoteCurrency__c</fullName>
    <formula>TEXT(CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Currency</label>
    <type>Text</type>
</CustomField>