force-app/main/default/objects/RequestForTechnician__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Name</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Request For Technicians</relationshipLabel>
    <relationshipName>RequestForTechnicians</relationshipName>
    <type>Lookup</type>
</CustomField>