force-app/main/default/objects/RequestForTechnician__c/fields/QuoteName__c.field-meta.xml
<CustomField>
    <fullName>QuoteName__c</fullName>
    <description>Publish Name from Quote object which is not visible for Technicians</description>
    <formula>QuoteId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Name</label>
    <type>Text</type>
</CustomField>