force-app/main/default/objects/RequestForTechnician__c/fields/QuoteShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>QuoteShippingAddress__c</fullName>
    <formula>IF(ISBLANK(QuoteId__r.ShippingStreet), &apos;&apos;, QuoteId__r.ShippingStreet + &apos;, &apos;)+
IF(ISBLANK(QuoteId__r.ShippingCity), &apos;&apos;, QuoteId__r.ShippingCity + &apos;, &apos;)+
IF(ISBLANK(QuoteId__r.ShippingPostalCode), &apos;&apos;, QuoteId__r.ShippingPostalCode + &apos;, &apos;)+
IF(ISBLANK(QuoteId__r.ShippingCountry), &apos;&apos;, QuoteId__r.ShippingCountry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>