force-app/main/default/objects/RequestForTechnician__c/fields/RequestProcessingDeadline__c.field-meta.xml
<CustomField>
    <fullName>RequestProcessingDeadline__c</fullName>
    <label>Request Processing Deadline</label>
    <type>Date</type>
</CustomField>