force-app/main/default/objects/RequestForTechnician__c/fields/TechnicianId__c.field-meta.xml
<CustomField>
    <fullName>TechnicianId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RequestForTechnicians</relationshipName>
    <type>Lookup</type>
</CustomField>