force-app/main/default/objects/RequestForTechnician__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RequestProcessingDeadline__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>QuoteId__c</columns>
    <columns>Status__c</columns>
    <columns>TechnicianId__c</columns>
    <columns>DescriptionForTechnician__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NoteForSalesman__c</columns>
    <columns>QuoteShippingAddress__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>Request for Tech. - All</label>
</ListView>