force-app/main/default/objects/RequestForTechnician__c/listViews/Request_for_Technitians_Michael_Hladky.listView-meta.xml
<ListView>
    <fullName>Request_for_Technitians_Michael_Hladky</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>QuoteId__c</columns>
    <columns>Status__c</columns>
    <columns>TechnicianId__c</columns>
    <columns>DescriptionForTechnician__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NoteForSalesman__c</columns>
    <columns>RequestProcessingDeadline__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TechnicianId__c</field>
        <operation>equals</operation>
        <value>Martin Lovecký</value>
    </filters>
    <label>Request for Tech. - Martin Lovecký</label>
</ListView>